refactor JS code & styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,14 @@
 body {
   height: 100vh;
   margin: 0;
+  background: black;
+}
+
+img {
+  height: 280px;
+  width: 400px;
+  margin-left: 560px;
+  margin-bottom: -150px;
 }
 
 .grid-wrapper {
@@ -23,6 +31,7 @@ body {
   justify-content: center;
   height: 700px;
   width: 1200px;
+  background-color: white;
 }
 
 .grid div {
