debug JS files, added basic overlays

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,14 +5,18 @@
 body {
   height: 100vh;
   margin: 0;
-  background: black;
+  background: #16dcf7;
 }
 
 img {
-  height: 280px;
-  width: 400px;
-  margin-left: 560px;
-  margin-bottom: -150px;
+  height: 180px;
+  width: 200px;
+  /* margin-left: 560px;
+  margin-bottom: -200px; */
+}
+
+.logo {
+  text-align: center;
 }
 
 .grid-wrapper {
@@ -77,3 +81,17 @@ img {
   background-size: contain;
   background-position: center;
 }
+
+/* .gameOverlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(241, 176, 35, 0.5);
+  z-index: 2;
+  cursor: pointer;
+} */
