--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,14 @@ img {
   text-align: center;
 }
 
+p {
+  font-size: 24px;
+}
+
+h2 {
+  color: salmon;
+}
+
 .game-board {
   width: 1010px;
   margin: 10px 40px 0;
