--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ body {
 img {
   height: 220px;
   width: 400px;
-  margin-bottom: -100px;
+  margin-bottom: -130px;
 }
 
 .logo {
@@ -33,11 +33,16 @@ h2 {
 
 .game-board {
   width: 1010px;
-  margin: 10px 40px 0;
-  z-index: 10;
+
   box-shadow: 0 0 20px 0 rgb(241, 6, 6);
   border-radius: 10px;
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  bottom: 1;
+  left: 1;
+  right: 1;
+  margin-top: 100px;
 }
 
 .grid-wrapper {
@@ -52,9 +57,8 @@ h2 {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
   justify-content: center;
-  height: 700px;
+  height: 780px;
   width: 1200px;
   background-color: white;
 }
@@ -64,6 +68,10 @@ h2 {
   height: 10%;
   width: 10%;
 }
+
+/* .grid div:nth-child(-n+10) {
+  background-color: green;
+} */
 
 /* characters */
 .grid div.charOne {
@@ -102,20 +110,27 @@ h2 {
   background-position: center;
 }
 
+.grid div.wolf {
+  background-image: url("/assets/cyborg_wolf.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
 .popUpInner {
   height: 700px;
   width: 1150px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  box-shadow: 0 0 10px 0 rgb(44, 212, 10);
+  box-shadow: 0 0 10px 0 rgb(12, 123, 133);
   border-radius: 20px;
 }
 
 .gameOver.popUpInner {
   box-shadow: 0 0 10px 0 rgb(8, 188, 122);
-  height: 600px;
-  width: 900px;
+  height: 700px;
+  width: 1150px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -124,14 +139,16 @@ h2 {
 .popUp {
   position: fixed;
   top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  bottom: 1;
+  left: 1;
+  right: 1;
+  margin-top: 100px;
+  height: 750px;
   transition: all 350ms;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(234, 29, 196, 0.8);
   display: flex;
   opacity: 0;
   pointer-events: none;
@@ -169,7 +186,7 @@ button {
 }
 
 .start.restart {
-  width: 140px;
+  width: 240px;
   height: 65px;
   background-color: hsl(95, 89%, 93%);
   border: none;
