--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,6 @@
 body {
   height: 100vh;
   margin: 0;
-  /* background: #16dcf7; */
   overflow: hidden;
   transition: opacity 0.5s;
   display: flex;
@@ -20,7 +19,8 @@ body {
 img {
   height: 220px;
   width: 400px;
-  margin-bottom: -130px;
+  margin-bottom: -100px;
+  opacity: 0.8;
 }
 
 .logo {
@@ -32,13 +32,13 @@ p {
 }
 
 h2 {
+  font-family: "Raleway Dots", sans-serif;
+  font-weight: bold;
   color: salmon;
 }
 
 .game-board {
   width: 1010px;
-
-  box-shadow: 0 0 20px 0 rgb(241, 6, 6);
   border-radius: 10px;
   overflow: hidden;
   position: fixed;
@@ -57,14 +57,12 @@ h2 {
 
 .grid {
   align-items: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   height: 780px;
   width: 1200px;
-  background-color: rgb(228, 90, 40);
-  opacity: 0.9;
+  background-color: rgba(54, 202, 172, 0.502);
 
   margin-top: -130px;
 }
@@ -75,10 +73,25 @@ h2 {
   width: 10%;
 }
 
-.grid div:nth-child(-n + 10) {
-  background-image: url("/assets/city_view.jpg");
-  background-repeat: repeat-y;
-  background-size: 100%;
+.corridor {
+  background-image: url("/assets/lab_corridor.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
+
+.assassin {
+  background-image: url("/assets/fire_assassin.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
+
+.warden {
+  background-image: url("/assets/warden.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  pointer-events: none;
 }
 
 /* characters */
@@ -119,7 +132,7 @@ h2 {
 }
 
 .grid div.wolf {
-  background-image: url("/assets/cyborg_wolf.jpg");
+  background-image: url("/assets/cyber_wolf.jpeg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -138,7 +151,7 @@ h2 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: -140px;
+  margin-top: -120px;
   padding: 30px;
 }
 
@@ -157,19 +170,18 @@ h2 {
 }
 
 .popUp {
-  position: fixed;
+  position: absolute;
   top: 0;
-  bottom: 1;
+  bottom: 0;
   left: 1;
   right: 1;
-  margin-top: 320px;
+  margin-top: 280px;
   margin-left: 30px;
   height: 750px;
   transition: all 350ms;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* background-color: rgba(234, 29, 196, 0.8); */
   display: flex;
   opacity: 0;
   pointer-events: none;
@@ -191,6 +203,10 @@ h2 {
   align-items: center;
 }
 
+.gameOverGIF {
+  height: 300px;
+}
+
 button {
   width: 125px;
   height: 65px;
@@ -199,9 +215,8 @@ button {
   margin-top: 35px;
   box-shadow: 0 0 20px 0 rgb(197, 234, 248);
   border-radius: 20px;
-  font-family: "Orbitron", sans-serif;
+  font-family: "Raleway Dots", sans-serif;
   font-size: 25px;
-  /* color:hsl(198, 64%, 33%);  */
   outline: 0 none;
 }
 
@@ -214,12 +229,12 @@ button {
 .start.restart {
   width: 240px;
   height: 65px;
-  background-color: hsl(95, 89%, 93%);
+  background-color: hsl(291, 69%, 59%);
   border: none;
-  box-shadow: 0 0 20px 0 rgb(253, 224, 204);
+  box-shadow: 0 0 20px 0 rgb(217, 108, 36);
   border-radius: 20px;
-  font-family: "Orbitron", sans-serif;
+  font-family: "Raleway Dots", sans-serif;
   font-size: 25px;
-  color: hsl(198, 64%, 33%);
+  color: hsl(204, 11%, 91%);
   margin-bottom: 160px;
 }
