--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ h2 {
   font-family: "Raleway Dots", sans-serif;
   font-weight: bold;
   color: salmon;
+  font-size: 30px;
 }
 
 .game-board {
@@ -63,7 +64,6 @@ h2 {
   height: 780px;
   width: 1200px;
   background-color: rgba(54, 202, 172, 0.502);
-
   margin-top: -130px;
 }
 
